force-app/main/default/objects/Host__c/Host__c.object-meta.xml
<CustomObject>
    <description>These are the property Owners.</description>
    <label>Host</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Host ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hosts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>