force-app/main/default/objects/Host__c/fields/Total_Properties__c.field-meta.xml
<CustomField>
    <fullName>Total_Properties__c</fullName>
    <label>Total Properties</label>
    <summaryForeignKey>Property__c.Host__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>