force-app/main/default/objects/Host__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Total_Properties__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>