force-app/main/default/objects/Host__c/listViews/Booking_Approver_Host.listView-meta.xml
<ListView>
    <fullName>Booking_Approver_Host</fullName>
    <filterScope>Queue</filterScope>
    <label>Booking Approver</label>
    <queue>Booking_Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>